# check_print

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
check_print/: main.py
